--- a/3/style.css
+++ b/3/style.css
@@ -1,28 +1,10 @@
-#main section {
-  margin-bottom: 50px;
+.a, .b, .c {
+  color: #000;
+  margin: 0;
 }
 
-#main section h1 {
-  font-size: 140%;
-}
-
-#main section p, #main section ul {
-  margin-bottom: 1.5rem;
-}
-
-#main section .notes {
-  color: red;
-}
-
-#main {
-  float: left;
-  width: 640px;
-}
-
-@media screen and (max-width: 640px) {
-  #main {
-    float: none;
-    width: auto;
-  }
+.b, .c {
+  padding: 0;
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
