--- a/3/style.scss
+++ b/3/style.scss
@@ -1,20 +1,3 @@
-@mixin media($width-meddia: 768px) {
-  @media only screen and (max-width: $width-meddia){
-    @content;
-  }
-}
-
-.item{
-  .image{
-    margin: 0 auto;
-    @include media{
-      padding: 0;
-    }
-  }
-  .text{
-    margin-top: 10px;
-    @include media{
-      padding-top: 10px;
-    }
-  }
+.box {
+  color: mix(#000000, #ffffff 50%);
 }
