--- a/3/style.scss
+++ b/3/style.scss
@@ -1,3 +1,9 @@
-.box {
-  color: mix(#000000, #ffffff 50%);
+$padding: -10px;
+
+.main{
+  padding-left: $width;
+  .box{
+    float: left;
+    width: abs($padding);
+  }
 }
